static/css/main.css
/*  COLORS
 * Sand Dollar  Dark Gray #6B5852
 * Spearmint    Blue      #8CBBBD
 * Cinnabar     Red       #F56C66
 * Ivory        Off-White #F6F0E7
 * */


body {
  color: #6B5852;
  font-family: serif; 
  background: #F6F0E7; 
  font-size: 1.25em; 
  letter-spacing: 0.5px; 
}

@font-face {
  font-family: fell-french;
  src: url('/fonts/FeFCrm2.ttf');
}
@font-face {
  font-family: fell-french-sc;
  src: url('/fonts/FeFCsc2.ttf');
}

h1, h2, h3 { font-family: fell-french; }
h1 { font-size: 1.5em }
h2 { font-size: 1.25em }
h3 { font-size: 1.1em }

#splash {
  text-align: center;
}

#splash a { text-decoration: none; }
#splash .header { border-bottom: 1px solid gray; }

bq.splash {   font-size: 1.25em; }
bq.splash i { font-size: 0.95em; }

img.portrait {
  padding: 0.5em 0; 
  margin: -1em auto; 
  width: 60%; 
  mix-blend-mode: darken; 
  filter: contrast(1.3);
}



div.m {
  padding: 0 1em; 
  max-width: 920px; 
  margin: 0 auto;
}

div.header {
  margin: 0.25em 0; 
}

div.sep {
  height: 1.25em; 
}

span.tab {
  padding: 0.75em; 
}

span.square-blue {
  padding: 0 0.4em;
  background: #8CBBBD; 
}

span.square-red {
  padding: 0 0.4em;
  background: #F56C66; 
}

div.header h1,h2,h3 {
  margin: 0.12em 0;
}
div.title h1 {
  /*text-decoration: underline;*/
  text-align: center; 
}

h1.u,h2.u, h3.u {
  text-align: left; 
  font-family: fell-french-sc; /* Small Caps */
}

h1.v, h2.v, h3.v {
  text-align: right; 
}

a {
  color: #000; 
  font-weight: inherit; 
}
a.n { text-decoration: none; }

.toc ul { list-style-type: none; }

/* csslayout.io/dot-leader/ */
.toc ul li.dotted { 
  width: 80%; 
  margin: 0 0 0.75em 0;
  border-bottom: 1px dashed black; 
}
.toc .flex { flex: 1 0; }
.toc li.dotted a { 
text-decoration: none;
  flex: 1 1;
}
.toc li.dotted b { display: flex; }

footer {
  height: 4em; 
}

